--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/index.js --ignore frontend"
+    "start": "nodemon server/index.js --ignore frontend"
   },
   "keywords": [],
   "author": "",
